# Automatic-Udemy-Course-Enroller-GET-PAID-UDEMY-COURSES-for-FREE

./: .coveragerc  .dockerignore  .gitignore  .restyled.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  SCRAPER_FIX_RESULTS.md  SECURITY.md  architecture.md  default_settings.json  logconfig.ini  pull_request_template.md  pyproject.toml  pytest.ini  readsettings.py  requirements.py  requirements.txt  sample_settings.yaml  settings.txt  settings.yaml  settings_example.txt  setup.cfg  setup.py  test_scraper_fixes.py  udemy_automate_course_enroll_v1.ipynb  udemy_automate_course_enroll_v1.py  udemy_enroller.py  udemy_enroller_chrome.py  udemy_enroller_chromium.py  udemy_enroller_edge.py  udemy_enroller_firefox.py  udemy_enroller_internet_explorer.py  udemy_enroller_opera.py  udemy_enroller_vanilla.py
.github/: release.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: bump-version.yaml  codeql-analysis.yml  publish-release.yaml  python-package.yml  release.yaml  start-release.yaml
core/: __init__.py  cache.py  driver_manager.py  exceptions.py  http.py  logging.py  runner.py  settings.py  tutorialbar.py  udemy.py  udemy_enroller.py  utils.py
core/scrapers/: base_scraper.py  comidoc.py  discudemy.py  manager.py  tutorialbar.py
scripts/: udemy_enroller.py
tests/: conftest.py  test_udemy_enroller.py
tests/core/: test_cache.py  test_driver_manager.py  test_settings.py  test_tutorialbar.py
tests/core/scrapers/: test_tutorialbar.py
udemy_enroller/: __init__.py  cache.py  cli.py  driver_manager.py  exceptions.py  http.py  http_utils.py  logger.py  runner.py  settings.py  udemy.py  udemy_rest.py  udemy_ui.py  utils.py
udemy_enroller/scrapers/: __init__.py  base_scraper.py  comidoc.py  coursevania.py  discudemy.py  freebiesglobal.py  idownloadcoupon.py  manager.py  realdiscount.py  selenium_base_scraper.py  tutorialbar.py
webdrivers/egde/Driver_Notes/: LICENSE
